--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,9 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
 .idea/**/tasks.xml
+.idea/**/workspace.xml
+.idea/workspace.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
