--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Created by https://www.toptal.com/developers/gitignore/api/eclipse,intellij,java,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,intellij,java,linux
+# Created by https://www.toptal.com/developers/gitignore/api/java,intellij,eclipse,linux,vim,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,eclipse,linux,vim,visualstudiocode
 
 ### Eclipse ###
 .metadata
-src/Java/
+bin/
 tmp/
 *.tmp
 *.bak
@@ -72,9 +72,8 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/tasks.xml
 .idea/**/workspace.xml
-.idea/workspace.xml
+.idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
@@ -222,4 +221,49 @@ replay_pid*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-# End of https://www.toptal.com/developers/gitignore/api/eclipse,intellij,java,linux
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/java,intellij,eclipse,linux,vim,visualstudiocode
